logs/django-bundles.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_bundles'...
Listing './lib/python3.5/site-packages/django_bundles/conf'...
Compiling './lib/python3.5/site-packages/django_bundles/conf/bundles_settings.py'...
***   File "./lib/python3.5/site-packages/django_bundles/conf/bundles_settings.py", line 21
    raise ImproperlyConfigured, "%s is a required setting for django_bundles" % name
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_bundles/management'...
Listing './lib/python3.5/site-packages/django_bundles/management/commands'...
Listing './lib/python3.5/site-packages/django_bundles/processors'...
Listing './lib/python3.5/site-packages/django_bundles/templatetags'...
Listing './lib/python3.5/site-packages/django_bundles/tests'...
Listing './lib/python3.5/site-packages/django_bundles/tests/utils'...
Listing './lib/python3.5/site-packages/django_bundles/utils'...
Compiling './lib/python3.5/site-packages/django_bundles/views.py'...
***   File "./lib/python3.5/site-packages/django_bundles/views.py", line 35
    print "Generating", path
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/django_bundles-0.6.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
